{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 18,
  "lineage": "f2d0a542-5fd0-4685-8198-79cd55a4dec9",
  "resources": [
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069720621369:internet-gateway/igw-0608d636fc89b7c32",
            "id": "igw-0608d636fc89b7c32",
            "owner_id": "069720621369",
            "tags": {
              "Name": "vois"
            },
            "tags_all": {
              "Name": "vois"
            },
            "vpc_id": "vpc-0a542024e1ac65994"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0608d636fc89b7c32",
            "id": "r-rtb-0b67ad04630304a751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b67ad04630304a75",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_internet_gateway.this",
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069720621369:route-table/rtb-027f981f23f6531e7",
            "id": "rtb-027f981f23f6531e7",
            "owner_id": "069720621369",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vois"
            },
            "tags_all": {
              "Name": "vois"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a542024e1ac65994"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069720621369:route-table/rtb-06a25c5fcff614517",
            "id": "rtb-06a25c5fcff614517",
            "owner_id": "069720621369",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vois"
            },
            "tags_all": {
              "Name": "vois"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a542024e1ac65994"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069720621369:route-table/rtb-0b67ad04630304a75",
            "id": "rtb-0b67ad04630304a75",
            "owner_id": "069720621369",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vois"
            },
            "tags_all": {
              "Name": "vois"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a542024e1ac65994"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069720621369:subnet/subnet-0c7a3f1c7e0c5a5a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/17",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7a3f1c7e0c5a5a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069720621369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet",
              "kubernetes.io/cluster/eksVault": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private subnet",
              "kubernetes.io/cluster/eksVault": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a542024e1ac65994"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069720621369:subnet/subnet-0cdd8ce5e44fbf5ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/17",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdd8ce5e44fbf5ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "069720621369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet",
              "kubernetes.io/cluster/eksVault": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public subnet",
              "kubernetes.io/cluster/eksVault": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a542024e1ac65994"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069720621369:vpc/vpc-0a542024e1ac65994",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da93d3334ff346ed",
            "default_route_table_id": "rtb-08d1c7d32377d3cf5",
            "default_security_group_id": "sg-083149e4838686ba9",
            "dhcp_options_id": "dopt-02bd0a8279cf84b0b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a542024e1ac65994",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d1c7d32377d3cf5",
            "owner_id": "069720621369",
            "tags": {
              "Name": "vois"
            },
            "tags_all": {
              "Name": "vois"
            }
          }
        }
      ]
    }
  ]
}